🐛💄🚑 Fixing icon alignment on mobile

--- a/src/style/browser.scss
+++ b/src/style/browser.scss
@@ -65,7 +65,7 @@
         text-align: left;
         text-align: start;
 
-        .material-icons {
+        .mdi {
           margin-left: 0;
           margin-right: 0.5rem;
         }
